[package]
name = "apiActixWeb"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-ws = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
rand = "0.8"
sqlx = { version = "0.7", features = [ "runtime-tokio", "macros", "postgres","chrono" ] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }